email 중복체크 api 추가, 인증메일 발송 api 수정
